--- a/Blog_Web_Application_Captston_Project/views/edit.ejs
+++ b/Blog_Web_Application_Captston_Project/views/edit.ejs
@@ -1,7 +1,7 @@
 <%- include('./partials/header.ejs') %>
 
 <div class="post">
-    <form action="/home" method="Patch">
+    <form action="/edit/<%= post.id %>" method="post">
         <p>title</p>
         <input type="text" name="title" value="<%= post.title %>">
         <p>content</p>
