--- a/Blog_Web_Application_Captston_Project/views/home.ejs
+++ b/Blog_Web_Application_Captston_Project/views/home.ejs
@@ -8,11 +8,11 @@
         <div class="post">
             <h2><%= post.title %></h2>
             <p><%= post.content %></p>
-            <form action="/edit" method="get">
+            <form action="/edit/<%= post.id %>" method="get">
                 <input type="hidden" name="id" value="<%= post.id %>"><input type="submit" value="✏️">
             </form>
-            <form action="/delete" method="DELETE">
-                <input type="hidden" name="id" value="<%= post.id %>"><inputp type="submit" value="❌">
+            <form action="/delete/<%= post.id %>" method="post">
+                <input type="hidden" name="id" value="<%= post.id %>"><input type="submit" value="❌">
             </form>
         </div>
             
