--- a/Blog_Web_Application_Captston_Project/views/partials/header.ejs
+++ b/Blog_Web_Application_Captston_Project/views/partials/header.ejs
@@ -7,4 +7,8 @@
     <title>Blog</title>
 </head>
 <body>
-    
+    <div id="createButton">
+        <form action="/newPost" method="get">
+            <input type="submit" value="NEW POST">
+        </form>
+    </div>
